Styled the dropdown menus, improved spacing, fixed bug causing overflow of rows

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,3 +12,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.grid {
+  padding-bottom: var(--mantine-spacing-md);
+}
