--- a/src/RoomSetup.module.css
+++ b/src/RoomSetup.module.css
@@ -3,7 +3,7 @@
 }
 
 .row {
-  height: 50px;
+  /* height: 50px; */
   width: 100%;
   display: flex;
   flex-wrap: wrap;
